Fixed mobile browser scaling problem
When zooming the icon navigator should no longer overlap onto the rest
of the page

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ li:hover {
 #small_icons {
 	width: 342px;
 	height: 64px;
-	position: fixed;
+	position: absolute;
 	top: 10px;
 	right: 10px;	
 }
